tests/errors/test_29.x
// Inappropriate dereference of variable

fn main() -> i64 {

    let mut x: i64 = 2;

    *x = 21;
}